# mediapipe_face_iris_cpp

./: .gitignore  CMakeLists.txt  README.md
models/: anchors.csv
src/: CMakeLists.txt  DetectionPostProcess.cpp  DetectionPostProcess.hpp  FaceDetection.cpp  FaceDetection.hpp  FaceLandmark.cpp  FaceLandmark.hpp  IrisLandmark.cpp  IrisLandmark.hpp  ModelLoader.cpp  ModelLoader.hpp  demo.cpp
